刷新jtoken
